--- a/advent_of_code_answers.ipynb
+++ b/advent_of_code_answers.ipynb
@@ -7,7 +7,24 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Day-1:-Report-Repair\" data-toc-modified-id=\"Day-1:-Report-Repair-1\"><strong>Day 1: Report Repair</strong></a></span></li><li><span><a href=\"#Day-2\" data-toc-modified-id=\"Day-2-2\"><strong>Day 2</strong></a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Day-1:-Report-Repair\" data-toc-modified-id=\"Day-1:-Report-Repair-1\"><strong>Day 1: Report Repair</strong></a></span></li><li><span><a href=\"#Day-2:-Password-Philosophy\" data-toc-modified-id=\"Day-2:-Password-Philosophy-2\"><strong>Day 2: Password Philosophy</strong></a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/aschul/Galvanize/practice/Advent_of_Code\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd Advent_of_Code/\n"
    ]
   },
   {
@@ -81,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Day 2**"
+    "# **Day 2: Password Philosophy**"
    ]
   },
   {
